--- a/First.yml
+++ b/First.yml
@@ -1,1 +1,14 @@
-msg:helloo...
+spring:
+  boot:
+    admin:
+      client:
+        url:
+        - http://localhost:1111/
+#server:
+#  port: 8081
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - '*'
