--- a/First.yml
+++ b/First.yml
@@ -1,9 +1,9 @@
-spring:
-  boot:
-    admin:
-      client:
-        url:
-        - http://localhost:1111/
+# spring:
+#   boot:
+#     admin:
+#       client:
+#         url:
+#         - http://localhost:1111/
 msg: vertechz
 #server:
 #  port: 8081
