--- a/First.yml
+++ b/First.yml
@@ -1,10 +1,10 @@
-# spring:
-#   boot:
-#     admin:
-#       client:
-#         url:
-#         - http://localhost:1111/
-msg: vertechz
+spring:
+  boot:
+    admin:
+      client:
+        url:
+        - http://localhost:1111/
+msg: vertechz international
 #server:
 #  port: 8081
 management:
