--- a/StudentService.yml
+++ b/StudentService.yml
@@ -1,30 +1,31 @@
-server:
-  port: 8081  # Change as needed
 
 spring:
   application:
-    name: my-microservice  # Unique name for service discovery (e.g., Eureka)
-
+    name: StudentService
+  boot:
+    admin:
+      client:
+        url:
+        - http://localhost:1111/
   datasource:
-    url: jdbc:mysql://localhost:3306/your_database_name?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/demo
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
-      ddl-auto: update  # Use 'none', 'validate', 'update', or 'create-drop' as needed
+      ddl-auto: update  # Options: none, validate, update, create, create-drop
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
-# Optional Eureka config if you're using service discovery
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    prefer-ip-address: true
-
-
+  # Optional: Format SQL for better readability
+  jpa.properties:
+    hibernate.format_sql: true
+server:
+  port: 9092
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - '*'
