--- a/TeacherService.yml
+++ b/TeacherService.yml
@@ -12,7 +12,7 @@ spring:
           - http://localhost:1111/
 
   datasource:
-    url: jdbc:mysql://localhost:3306/TeaceherDB
+    url: jdbc:mysql://localhost:3306/TeacherDB
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
